Add Unit Test For Service